--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "\n",
     "### Target veriable:\n",
-    "#### Expense : How much expense \n",
+    "#### Expenses : How much expense \n",
     "\n",
     "\n",
     "Dataset link: https://www.kaggle.com/datasets/noordeen/insurance-premium-prediction"
