EDA file updated

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -31,7 +31,7 @@
     "3. bmi :  BMI of person\n",
     "4. Children : How much childrens have\n",
     "5. Smoker : Person is a smoker or not\n",
-    "6. Region : Person belong to which region(southwest or northwest)\n",
+    "6. Region : Person belong to which region(southwest, southwest,northeast,northwest)\n",
     "\n",
     "\n",
     "### Target veriable:\n",
